--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
                     <div class="col-md-8">
                         <h3 class="title-big mb-sm-5 mb-4">最近更新</h3>
                         <div class="xcblog-blog-list">
+                                                        <div class="row xcblog-blog-item" data-date="2024-10-26">
+                                <div class="col-lg-4">
+                                    <div class="position-relative">
+                                        <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
+                                            <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 mt-lg-0 mt-5">
+                                    <a href="/free-nodes/2024-10-26-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="title-big xcblog-blog-title">10月26日更新22.1M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</h3>
+                                    </a>
+                                    <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、新加坡、香港、加拿大、美国、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                        10月26日                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row xcblog-blog-item" data-date="2024-10-25">
                                 <div class="col-lg-4">
                                     <div class="position-relative">
@@ -425,23 +442,6 @@
                                         10月7日                                    </p>
                                 </div>
                             </div>
-                                                        <div class="row xcblog-blog-item" data-date="2024-10-06">
-                                <div class="col-lg-4">
-                                    <div class="position-relative">
-                                        <a href="/free-nodes/2024-10-6-clash-windows.htm" class="xcblog-blog-url">
-                                            <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="10月6日更新20.8M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 mt-lg-0 mt-5">
-                                    <a href="/free-nodes/2024-10-6-clash-windows.htm" class="xcblog-blog-url">
-                                        <h3 class="title-big xcblog-blog-title">10月6日更新20.8M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</h3>
-                                    </a>
-                                    <p class="mt-4">这一次的节点更新覆盖了新加坡、欧洲、香港、美国、加拿大、韩国、日本等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                    <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                        10月6日                                    </p>
-                                </div>
-                            </div>
                                                     </div>
                     </div>
                     <div class="col-md-4 w3l-services">
@@ -450,8 +450,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-22-clash-v2ray-ss-ssr.htm">7月22日更新19.4M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、香港、韩国、新加坡、美国、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-15-free-ssr-node.htm">10月15日更新20.2M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、加拿大、欧洲、韩国、日本、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -460,8 +460,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-22-clash-node-daily-updates.htm">10月22日更新19.5M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、韩国、美国、加拿大、欧洲、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-11-node-share.htm">7月11日更新21.4M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、韩国、加拿大、香港、新加坡、美国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -470,8 +470,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-2-free-ssr-node.htm">3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、香港、美国、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-4-free-clash.htm">6月4日更新21.4M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、加拿大、美国、欧洲、韩国、日本、香港等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -480,8 +480,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-31-free-clash-subscribe.htm">3月31日更新19.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、欧洲、日本、香港、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-15-clash-node.htm">9月15日更新19M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、美国、日本、韩国、欧洲、香港等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -490,8 +490,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-10-free-high-speed-nodes.htm">5月10日更新21.1M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、韩国、新加坡、日本、欧洲、美国等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-8-free-v2ray.htm">9月8日更新21.2M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、日本、欧洲、韩国、香港、加拿大、美国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -500,8 +500,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-5-free-node-subscribe-links.htm">10月5日更新22.3M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、日本、香港、新加坡、加拿大、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-15-clash-node.htm">8月15日更新22.1M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、美国、日本、新加坡、加拿大、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -510,8 +510,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-7-free-clash.htm">9月7日更新23M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-20-clash-windows.htm">5月20日更新18.6M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、韩国、香港、日本、美国、加拿大、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -520,8 +520,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-8-free-high-speed-nodes.htm">5月8日更新21.3M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、美国、欧洲、香港、日本、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-14-free-node-subscribe-links.htm">10月14日更新18.2M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、美国、加拿大、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -530,8 +530,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-18-clash-windows.htm">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-21-free-high-speed-nodes.htm">4月21日更新18.2M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、美国、欧洲、加拿大、新加坡、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -540,8 +540,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-4-clash-node-daily-updates.htm">10月4日更新19.8M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、加拿大、韩国、新加坡、欧洲、香港等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-6-shadowrocket-node.htm">4月6日更新20.7M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、香港、美国、新加坡等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -552,7 +552,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
                                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-07/" title="2024-07 归档">2024-07</a></h4>
